[package]
name = "miniscript-psbt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
bitcoin = { version = "0.29.1", default-features = false }
bitcoind = { version = "0.27.0", features=["23_0"] }
miniscript = { version = "9.0.0", features = ["compiler"] }
